add pole and fix enviroment

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>first threejs portfolio</title>
+    <meta name="description" content="Web site for cheyoon portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Jcheyoon_portfolio" />
+    <meta
+      property="og:description"
+      content="Cheyoon Jung, Frontend Developer based in Budapest, Hungary. Portfolio site: Introduction, about, portfolio"
+    />
+    <title>Cheyoon</title>
+    <link rel="icon" type="image/x-icon" href="./apple-touch-icon.png">
   </head>
   <body>
     <div id="root"></div>
